fix: ! align status column with other dates

--- a/src/ui/EditTask.scss
+++ b/src/ui/EditTask.scss
@@ -67,7 +67,7 @@
 
 .tasks-modal-dates-section {
     display: grid;
-    grid-template-columns: 6.0em auto;
+    grid-template-columns: 6.0em 13em auto;
     column-gap: .5em;
     row-gap: 5px;
     align-items: center;
